# Agora-Test-Usecase

./: .gitignore  README.md
CSSA-1031/agora-live-streaming/: .gitignore  README.md
CSSA-1031/agora-live-streaming/app/: .gitignore  build.gradle
CSSA-1031/agora-live-streaming/gradle/wrapper/: gradle-wrapper.properties
CSSA-1073/agora-chanel-media-relay/: settings.gradle
CSSA-1073/agora-chanel-media-relay/app/: build.gradle
CSSA-1073/agora-chanel-media-relay/gradle/wrapper/: gradle-wrapper.properties
CSSA-1187/rtc-sdk-rtmp-cdn/: .gitignore  Dockerfile  Dockerfile_app  Makefile  README.md
CSSA-1187/rtc-sdk-rtmp-cdn/.devcontainer/: devcontainer.json
CSSA-1187/rtc-sdk-rtmp-cdn/example/capture_yuv/: CMakeLists.txt  sample_send_capture_yuv.cpp  yuv_capture.cpp  yuv_capture.h
CSSA-1187/rtc-sdk-rtmp-cdn/example/rtmp/: CMakeLists.txt  sample_receive_from_rtn_and_send_rtmp.cpp  sample_send_yuv_pcm_via_rtmp.cpp
CSSA-1187/rtc-sdk-rtmp-cdn/example/send_dual_video_stream/: sample_send_h264_dual_stream.cpp  sample_send_yuv_dual_stream.cpp
CSSA-1187/rtc-sdk-rtmp-cdn/src/: CMakeLists.txt  rtmp_cdn_demo.cpp
FT-1026/agora-chanel-media-relay-new/: README.md  settings.gradle
FT-1026/agora-chanel-media-relay-new/app/: build.gradle
FT-548/AudioDualStreamDemo-Android/: settings.gradle
FT-548/AudioDualStreamDemo-Android/app/: .gitignore  build.gradle
FT-548/AudioDualStreamDemo-Android/gradle/: libs.versions.toml
FT-548/AudioDualStreamDemo-Android/gradle/wrapper/: gradle-wrapper.properties
FT-548/AudioDualStreamDemo-iOS/AudioDualStreamDemo/: Podfile
FT-814/MyApplication/app/: build.gradle.kts
FT-814/MyApplication/gradle/wrapper/: gradle-wrapper.properties
FT-814/STTMediaPlayer-Android/: .gitignore  settings.gradle.kts
FT-814/STTMediaPlayer-Android/app/: README.md  build.gradle.kts
Jaco-videoframe/agora-videoframe_transition/: settings.gradle
Jaco-videoframe/agora-videoframe_transition/app/: build.gradle
(+167 files in other folders)
